faire la validation des donnes fournis pour l'inscription. Analiser si au moment de faire l'inscription le courriel existe deja, efectuer l'inscrition e ajouter des donnes dans la base de donnees. Creer la page de connection, analiser si le courriel existe ou pas dans la base de donnees, comparer le mot de passe envoye avec le mot de passedans la base de donnees. Connecter au site avec sa session et rentrer dans la page show qui apparait avec tous les infos de la personne connecte. Une personne avec un autre Id ne peux pas rentrer dans cette page.

--- a/public/css/composants/button.css
+++ b/public/css/composants/button.css
@@ -4,9 +4,9 @@
   margin-top: 15px;
   margin-bottom: 10px;
   margin-right: 10px;
-  background-color: var(--bleu-fonce);
+  
   padding: 8px 5px;
-  border: 0.5px solid var(--bleu-fonce);
+  
   color: whitesmoke;
   transition: all 0.3s ease-in-out;
 
@@ -16,4 +16,14 @@
     border: 0.5px solid var(--joune-fonce);
     color: var(--bleu-fonce);
   }
+}
+.button-rouge {
+  background-color: var(--rouge-fonce);
+  border: 0.5px solid var(--joune-fonce);
+}
+
+.button-bleu {
+  background-color: var(--bleu-fonce);
+  border: 0.5px solid var(--bleu-fonce);
+
 }
