Creation des bouton dans la page show pour aller a une page pour ajouter un timbre, adapter la page header.php pour quand un client soit connecter apparaitre un autre optim timbre dans la barre de navigation pour choisir les options d'jouter un timbre, voir mes timbres et mes timbres favoris. AjCreer le Controller pour les timbres et aussi le fichier timbre.php dans models.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,5 +21,6 @@
 @import "./composants/donnee.css";
 @import "./composants/flex-row.css";
 @import "./composants/flex-column.css";
+@import "./composants/barre-division.css";
 @import "./composants/media-query.css";
 
