--- a/public/css/composants/button.css
+++ b/public/css/composants/button.css
@@ -3,7 +3,7 @@
   align-self: flex-end;
   margin-top: 15px;
   margin-bottom: 10px;
-  margin-right: 10px;
+  /* margin-right: 10px; */
   
   padding: 8px 5px;
   
@@ -25,5 +25,10 @@
 .button-bleu {
   background-color: var(--bleu-fonce);
   border: 0.5px solid var(--bleu-fonce);
+}
 
+.button-joune {
+  background-color: var(--joune-fonce);
+  color: white;
+  border: 0.5px solid var(--joune-fonce);
 }
