--- a/public/css/composants/form.css
+++ b/public/css/composants/form.css
@@ -27,6 +27,10 @@
       font-size: 20px;
     }
   }
+  & .form__contenu_btn {
+    display: flex;
+    justify-content: space-between;
+  }
 
   & .form__input {
     border: none;
