Corriger en ajouteant ou en modifieant les liens du menu navigation au twig pour m'envoyer a la page souhaite. Afficher tous les images de la liste sur la page timbre/timbre. Creer la page pour editer un timbre (views/timbre/edit.php). La funtion pour faire un update d'un timbre. Le chemin web pour aller a la page pour editer le timbre. Valider pour faire le mise a jour d'un timbre. Creation de la function Zoom en JS pour l'image principale sur la page timbre

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@
 @import "./composants/flex-row.css";
 @import "./composants/flex-column.css";
 @import "./composants/barre-division.css";
+@import "./composants/img-zoom-container.css";
 @import "./composants/error.css";
 @import "./composants/media-query.css";
 
