--- a/public/css/composants/timbre.css
+++ b/public/css/composants/timbre.css
@@ -1,7 +1,7 @@
 .timbre {
   margin-inline: auto;
   margin-bottom: 30px;
-  height: 600px;
+  height: 550px;
   max-width: 770px;
   display: flex;
   gap: 20px;
@@ -14,7 +14,6 @@
   height: fit-content;
   min-width: 250px;
   max-width: 350px;
-
   & > picture {
     display: block;
     width: 100%;
@@ -28,8 +27,16 @@
 .timbre__galerie-petit {
   margin-top: 15px;
   display: flex;
+  flex-wrap: wrap;
   gap: 15px;
   height: 150px;
+
+  & > * {
+    max-height: 100px;
+    max-width: 100px;
+    /* flex-basis: 75px; */
+    /* flex-grow: 1; */
+  }
 }
 
 .timbre__contenu {
