Alteration de la table Image, j'ai ajoute la colonne ordre pour determiner l'importance des images. Creation du ImageController, le chemin wep.php pour afficher la page pour editer les images. Creation de views/image/edit.php. Fonction pour deleter une image secondaire, le chemin web pour le deleter. Faire le mise a jour de l'image principale

--- a/public/css/composants/timbre.css
+++ b/public/css/composants/timbre.css
@@ -18,9 +18,39 @@
     display: block;
     width: 100%;
     min-height: 200px; 
-    max-height: 400px; 
+    max-height: 300px; 
     overflow: hidden;
     
+  }
+}
+
+/* VARIATION POUR AFFICHER LES IMAGES */
+.timbre-images {
+  margin-inline: auto;
+  margin-bottom: 30px;
+  height: fit-content;
+  max-width: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  border: 1px solid var(--brun-fonce);
+  padding: 35px;
+  
+}
+
+.timbre__galerie-images {
+  display: flex;
+  gap: 20px;
+
+  & > * {
+    flex-basis: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    & img {
+      height: 150px;
+    }
   }
 }
 
