--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,5 +24,6 @@
 @import "./composants/barre-division.css";
 @import "./composants/img-zoom-container.css";
 @import "./composants/error.css";
+@import "./composants/offre.css";
 @import "./composants/media-query.css";
 
