--- a/public/css/composants/timbre.css
+++ b/public/css/composants/timbre.css
@@ -1,7 +1,8 @@
 .timbre {
   margin-inline: auto;
   margin-bottom: 30px;
-  height: 550px;
+  min-height: 550px;
+  max-height: 700px;
   max-width: 770px;
   display: flex;
   gap: 20px;
@@ -65,8 +66,6 @@
   & > * {
     max-height: 100px;
     max-width: 100px;
-    /* flex-basis: 75px; */
-    /* flex-grow: 1; */
   }
 }
 
@@ -78,7 +77,6 @@
 
   & > div {
     margin-top: 15px;
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
     gap: 7px;
