Regler la logique dans les controllers enchere, mise et timbre pour afficher la derniere valeur de mise, s'il y en a.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,5 +25,6 @@
 @import "./composants/img-zoom-container.css";
 @import "./composants/error.css";
 @import "./composants/offre.css";
+@import "./composants/accordeon.css";
 @import "./composants/media-query.css";
 
