--- a/public/css/composants/media-query.css
+++ b/public/css/composants/media-query.css
@@ -1,4 +1,18 @@
-@media (max-width: 1200px) {
+@media (max-width: 1075px) {
+  /* TIMBRE */
+  .timbre {
+    margin-top: 150px;
+  }
+  /* ZOOM */
+  .img-zoom-result {
+    
+    margin-top: -170px;
+    margin-left: -16px;
+   
+    /*set the size of the result div:*/
+    width: 150px;
+    height: 150px;
+  }
 }
 @media (max-width: 900px) {
   /* ENTETE */
@@ -121,6 +135,11 @@
 }
 
 @media (max-width: 700px) {
+  
+  /* ZOOM */
+  .img-zoom-result {
+    display: none;
+  }
   .entete__contenu {
     margin-left: 15vw;
     margin-right: 15vw;
@@ -145,6 +164,39 @@
       font-weight: 600;
     }
   }
+
+  .flex-column {
+    justify-content: space-between;
+
+    & button {
+      margin-top: 0px !important;
+      margin-bottom: 0px !important;
+    }
+
+    & .form__contenu {
+
+      margin-right: 0;
+      display: flex;
+      flex-direction: column;
+
+      & > * {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        justify-content: end;
+        text-align: end;
+      }
+    }
+
+    & .offre {
+      flex-direction: column-reverse;
+      gap: 10px;
+
+      & input {
+        width: 16ch;
+      }
+    }
+  }
   /* FILTRE */
   .filtre {
     
@@ -154,10 +206,10 @@
     }
   }
   
-  
+  /* TIMBRE */
   .timbre {
-    flex-direction: column-reverse;
-    height: fit-content;
+    margin-top: 0px;
+    flex-direction: column;
     max-width: 350px;
     
     & p{
@@ -169,6 +221,33 @@
     & button {
       margin-top: 25px;
       margin-bottom: 15px;
+    }
+  }
+/* GALERIE IMAGES */
+
+.timbre__galerie {
+
+  min-width: 200px;
+  max-width: 350px;
+  & > picture {
+    display: block;
+    width: 100%;
+    min-height: 100px; 
+    max-height: 170px; 
+    overflow: hidden;
+    
+  }
+}
+  .timbre__galerie-petit {
+    margin-top: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    height: 80px;
+  
+    & > * {
+      max-height: 60px;
+      max-width: 60px;
     }
   }
 
