--- a/public/css/composants/encheres.css
+++ b/public/css/composants/encheres.css
@@ -4,10 +4,10 @@
   width: 100%;
   height: auto;
 
-  & > * + * {
+  /* & > * + * {
 
     margin-top: 90px;
-  }
+  } */
 }
 
 .encheres__presentation {
