creer le filtre pour afficher le resultat des conditions de certifie, pays, couleur et condition

--- a/public/css/composants/carte.css
+++ b/public/css/composants/carte.css
@@ -50,6 +50,7 @@
     margin-top: auto;
     display: flex;
     align-items: center;
+    justify-content: space-around;
     gap: 10px;
 
     & > div {
