--- a/public/css/base/generale.css
+++ b/public/css/base/generale.css
@@ -96,7 +96,7 @@ img {
 
 body {
   min-height: 100vh;
-  max-width: 1400px;
+  /* max-width: 1600px; */
   margin-inline: auto;
   display: grid;
   grid:
@@ -114,7 +114,7 @@ body {
   }
   
   & > main {
-    margin-inline: auto;
+    margin-inline: 100px;
     max-width: 90vw;
     grid-area: main;
   }
@@ -149,4 +149,8 @@ li {
 a {
   font-size: var(--petit-3);
   text-decoration: none;
+}
+
+hr {
+  margin-top: 20px;
 }
