--- a/public/css/composants/media-query.css
+++ b/public/css/composants/media-query.css
@@ -14,6 +14,7 @@
     height: 150px;
   }
 }
+
 @media (max-width: 900px) {
   /* ENTETE */
   .entete {
@@ -132,6 +133,22 @@
     height: fit-content;
   }
   
+}
+
+@media (max-width: 800px) {
+  .image-cote{
+    flex-direction: column-reverse;
+
+    & > picture{
+      width: 100%;
+      
+    }
+  }
+
+  .image-cote-gauche{
+    flex-direction: column;
+  }
+
 }
 
 @media (max-width: 700px) {
